--- a/Chart.yaml
+++ b/Chart.yaml
@@ -16,7 +16,7 @@ type: application
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
 
-appVersion: 2021.01.06.537
+appVersion: latest
 description: Official Enclave Helm Chart 
 home: https://enclave.io
 icon: https://enclave.io/img/enclave-logo.png
