--- a/values.yaml
+++ b/values.yaml
@@ -4,9 +4,12 @@
 
 replicaCount: 1
 
+enclave:
+  enrolmentKey: xxxxx-xxxxx-xxxxx-xxxxx-xxxxx
+
 image:
-  repository: nginx
-  pullPolicy: IfNotPresent
+  repository: enclavenetworks/enclave
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
@@ -21,20 +24,32 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  name: "enclave-user"
 
 podAnnotations: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
+securityContext:
+  capabilities:
+    drop:
+    - ALL
+    add:
+    - NET_ADMIN
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
+
+volumeMounts:
+  - name: tun
+    mountPath: /dev/net/tun
+
+volumes:
+  - name: tun
+    hostPath:
+      type: 'CharDevice'
+      path: /dev/net/tun
 
 service:
   type: ClusterIP
@@ -42,13 +57,13 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
+  #  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths: []
-  tls: []
+  #  hosts:
+  #    - host: chart-example.local
+  #      paths: []
+  #  tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
