--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -3,4 +3,6 @@ kind: Secret
 metadata:
   name: {{ .Release.Name }}-options
 stringData:
+  {{- if .Values.enclave.enrolmentKey }}
   enrolmentKey: {{ .Values.enclave.enrolmentKey }}
+  {{ end }}
