--- a/values.yaml
+++ b/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 enclave:
-  enrolmentKey: xxxxx-xxxxx-xxxxx-xxxxx-xxxxx
+  enrolmentKey: ""
 
 image:
   repository: enclavenetworks/enclave
@@ -32,15 +32,12 @@ podSecurityContext: {}
   # fsGroup: 2000
 
 securityContext:
-  privileged: true
-  capabilities:
-  #  drop:
-  #  - ALL
-    add:
-    - NET_ADMIN
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
+  privileged: true
+  capabilities:
+    add: ['NET_ADMIN']
 
 volumeMounts:
   - name: tun
@@ -51,41 +48,19 @@ volumes:
     hostPath:
       type: 'CharDevice'
       path: /dev/net/tun
-
-service:
-  type: ClusterIP
-  port: 80
+  - name: config
+    mountPath: /etc/enclave/profiles
 
 ingress:
   enabled: false
-  #  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  #  hosts:
-  #    - host: chart-example.local
-  #      paths: []
-  #  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
 
 autoscaling:
   enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
+  # minReplicas: 1
+  # maxReplicas: 100
+  # targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
